# Rk3568_Code

./: README.md  三阶段--LInux并发+网络编程.md  三阶段--Linux并发+网络编程.md  二阶段--开发板学习&LVGL.md  常用指令.md  常用指令.txt
.claude/: settings.local.json
1_交叉开发/1_交叉编译/01-note/: gcc和gdb.md
1_交叉开发/1_交叉编译/02-code/: a.out
1_交叉开发/2_gcc与gdb/: 常用gdb命令.md
1_交叉开发/2_gcc与gdb/02-code/: test  test.c  test2  test2.c
1_交叉开发/3_makefile/01-note/: Makefile.md
1_交叉开发/3_makefile/02-code/: app  main.c  makefile
1_交叉开发/4_库/01-note/: 库.md
1_交叉开发/4_库/02-code/: main  main.c
1_交叉开发/5_cmake/01-note/: cmake.md
1_交叉开发/5_cmake/02-code/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/bulid/: CMakeCache.txt  Makefile  classtest  cmake_install.cmake
1_交叉开发/5_cmake/02-code/classtest/example1/: CMakeLists.txt  Makefile  b.cmake  main.c
1_交叉开发/5_cmake/02-code/classtest/example3/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example4/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example5/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example5/src/: main.c  sub.c
1_交叉开发/5_cmake/02-code/classtest/example6/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example6/lib/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example6/src/: main.c
1_交叉开发/5_cmake/02-code/classtest/example7/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example7/inc/: sub.h
1_交叉开发/5_cmake/02-code/classtest/example7/lib/: CMakeLists.txt
1_交叉开发/5_cmake/02-code/classtest/example7/src/: main.c
1_交叉开发/5_cmake/02-code/mytest/: CMakeLists.txt  bst.h
2_文件IO/: 一阶段项目.md
2_文件IO/01-系统io/01-note/: 系统io.md
2_文件IO/01-系统io/bmp_show/: main.c  show_color
2_文件IO/02-标准io/01-note/: 标准io.md
2_文件IO/03-串口编程/01-note/: linux串口编程.md
2_文件IO/03-串口编程/02-code/: a.out  gy39.c  gy39.h  main_monitor.c  mq2.c  mq2.h  sensor_monitor  serial_port.c  serial_port.h  test_gy39  test_gy39.c  test_smoke  test_smoke.c
2_文件IO/03-串口编程/03-资料/: serial.c  serial.h
2_文件IO/04-LVGL/01-note/: LVGL.md
2_文件IO/04-LVGL/02-code/: 2048_teacher.c  teacher_test.c  test.c  test01.c  test02.c  test03.c  test06.c  test07.c
2_文件IO/04-LVGL/demo/: CLAUDE.md  CMakeLists.txt  lv_conf.h  main.c
2_文件IO/04-LVGL/ubuntu_demo/: CMakeLists.txt  README.md  lv_conf.h  main.c
2_文件IO/04-LVGL/ubuntu_demo/client/: nurse_client  nurse_client.c
2_文件IO/04-LVGL/ubuntu_demo/code/: medical.c  medical.h
2_文件IO/04-LVGL/ubuntu_demo/core/: app_state.c  app_state.h  logger.c  logger.h
2_文件IO/04-LVGL/ubuntu_demo/freetype-2.13.3/builds/unix/: config.status  libtool  unix-cc.mk  unix-def.mk
2_文件IO/04-LVGL/ubuntu_demo/lvgl/src/others/ime/: lv_ime_pinyin.c
2_文件IO/04-LVGL/ubuntu_demo/mycode/: 2048.c  2048.h  README.md  album.c  album.h  app_ui.c  app_ui.h  my_ziti_28.c  ui_font.c  ui_font.h  user_data.c  user_data.h
2_文件IO/04-LVGL/ubuntu_demo/net/: cJSON.c  net_server.c  net_server.h  protocol.c  protocol.h  udp_discover.c  udp_discover.h
2_文件IO/04-LVGL/ubuntu_demo/other/: 2048.c  README.md  player.h
2_文件IO/04-LVGL/ubuntu_demo/outputs/lvgl-defense-ppt/: LVGL_项目答辩汇报.pptx  build_deck.mjs  narrative_plan.md  output.pptx
2_文件IO/04-LVGL/ubuntu_demo/outputs/lvgl-defense-ppt/tmp/slides/lvgl-defense-ppt/: inspect.ndjson
2_文件IO/04-LVGL/ubuntu_demo/outputs/lvgl-defense-ppt/tmp/slides/lvgl-defense-ppt/verification/: render_verify_loops.ndjson
2_文件IO/04-LVGL/ubuntu_demo/ui/: app_ui.c  medical.c  medical.h
3_网络编程/01-并发/01-note/: 进程.md
3_网络编程/01-并发/02-code/: 01-创建进程.c  02-父子进程循环打印数据.c  03-父子进程地址空间相互独立.c  04-子进程拷贝父进程的标准io缓冲区.c  05-进程退出.c  06-等待子进程退出.c  07-僵尸进程.c  08-test  08-test.c  09-exec函数簇.c  11  11-madplay播放音乐.c  a.out  test  test.c
3_网络编程/02-进程间通信/: CLAUDE.md  进程间通信.md
3_网络编程/02-进程间通信/1.管道/: 管道.md
3_网络编程/03-网络编程/: 3-3、网络编程测试题-答案-20230302.doc
STM32/1_MCU最小系统与PCB设计/: MCU最小系统与PCB设计笔记.md
STM32/1_MCU最小系统与PCB设计/STM32F103RCT6项目用开发板/: stm32f103rct6开发板.eprj2
STM32/1_MCU最小系统与PCB设计/资料/: STM32F103RCT6开发板_新版.elib
STM32/2_计算机组成与M4体系结构/: 计算机组成与M4体系结构笔记.md
STM32/模数电复习资料/2_数字电路课件PPT/: 第1章数制与编码.ppt  第6章时序电路的分析与设计 .ppt  (+3 more)
(+270 files in other folders)
